finish the quiz

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <header>
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 logo">
-                        <img src="http://139.59.28.82/QC-Release2/uploads/sitesetting/quiqclaim-logo.png" alt="">
+                        <img src="quiqclaim-logo.png" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 desktopmenu">
                         <ul>
