--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"crossorigin="anonymous"></script>
     <script src="http://139.59.28.82/QC-Release2/public/frontend/assets/owl.carousel.js"></script>
-    <script src="http://139.59.28.82/QC-Release2/public/frontend/js/bootstrap.min.js"></script>
+    <script src="app.js"></script>
 
 </head>
 
@@ -30,7 +30,7 @@
             <header>
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 logo">
-                        <img src="quiqclaim-logo.png" alt="">
+                        <img src="images/quiqclaim-logo.png" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 desktopmenu">
                         <ul>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-md-7 col-lg-6">
                         <div class="bannerimg">
-                            <img src="banner.png" alt="">
+                            <img src="images/banner.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -80,27 +80,27 @@
                                     style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 1220px;">
                                     <div class="owl-item active" style="width: 244px;">
                                         <div class="item"><a href="#"><img
-                                                    src="business-partner1.gif"
+                                                    src="images/business-partner1.gif"
                                                     alt="image-1"></a></div>
                                     </div>
                                     <div class="owl-item active" style="width: 244px;">
                                         <div class="item"><a href="#"><img
-                                                    src="business-partner2.gif"
+                                                    src="images/business-partner2.gif"
                                                     alt="image-1"></a></div>
                                     </div>
                                     <div class="owl-item active" style="width: 244px;">
                                         <div class="item"><a href="#"><img
-                                                    src="business-partner3.gif"
+                                                    src="images/business-partner3.gif"
                                                     alt="image-1"></a></div>
                                     </div>
                                     <div class="owl-item active" style="width: 244px;">
                                         <div class="item"><a href="#"><img
-                                                    src="business-partner4.gif"
+                                                    src="images/business-partner4.gif"
                                                     alt="image-1"></a></div>
                                     </div>
                                     <div class="owl-item active" style="width: 244px;">
                                         <div class="item"><a href="#"><img
-                                                    src="business-partner5.gif"
+                                                    src="images/business-partner5.gif"
                                                     alt="image-1"></a></div>
                                     </div>
                                 </div>
@@ -132,7 +132,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <span class="avtaar"><img
-                                    src="register-hcp.jpg"
+                                    src="images/register-hcp.jpg"
                                     alt=""></span>
                             <h6> Healthcare Providers</h6>
                             <h5> Bridging the conflicting interests of Insurance Companies and the providers</h5>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="col-md-4">
                             <span class="avtaar"><img
-                                    src="register-investors.jpg"
+                                    src="images/register-investors.jpg"
                                     alt=""> 
                             </span>
                             <h6> Investors</h6>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="col-md-4">
                             <span class="avtaar"><img
-                                    src="register-insurance.jpg"
+                                    src="images/register-insurance.jpg"
                                     alt=""> </span>
                             <h6> Insurance </h6>
                             <h5> Decrease Administration and logistical costs</h5>
@@ -179,7 +179,7 @@
                     <ul class="nav nav-pills nav-stacked flex-column ">
                       <li>
                         <a href="#tab_a" data-toggle="pill" class="active">
-                          <img src="testimonial-avtar1.jpg" alt="">
+                          <img src="images/testimonial-avtar1.jpg" alt="">
                           <div class="testimonials-dtls">
                             <h6>Muna Judeh</h6>
                             <p>General Manager at Khoury Drugstore Co.</p>
@@ -188,7 +188,7 @@
                       </li>
                       <li>
                         <a href="#tab_b" data-toggle="pill">
-                          <img src="testimonial-avtar2.jpg" alt="">
+                          <img src="images/testimonial-avtar2.jpg" alt="">
                           <div class="testimonials-dtls">
                             <h6>Muna Judeh</h6>
                             <p>General Manager at Khoury Drugstore Co.</p>
@@ -197,7 +197,7 @@
                       </li>
                       <li>
                         <a href="#tab_c" data-toggle="pill">
-                          <img src="testimonial-avtar3.jpg" alt="">
+                          <img src="images/testimonial-avtar3.jpg" alt="">
                           <div class="testimonials-dtls">
                             <h6>Muna Judeh</h6>
                             <p>General Manager at Khoury Drugstore Co.</p>
@@ -206,7 +206,7 @@
                       </li>
                       <li>
                         <a href="#tab_d" data-toggle="pill">
-                          <img src="testimonial-avtar4.jpg" alt="">
+                          <img src="images/testimonial-avtar4.jpg" alt="">
                           <div class="testimonials-dtls">
                             <h6>Muna Judeh</h6>
                             <p>General Manager at Khoury Drugstore Co. </p>
@@ -286,7 +286,7 @@
               <div class="readytobepart">
                 <div class="row">
                   <div class="col-lg-8 mx-auto text-center">
-                    <img src="logo-shape1.png" alt="">
+                    <img src="images/logo-shape1.png" alt="">
                     <h3> Ready to be part of the health care claims marketplace?
                     </h3>
                     <a href="#" class="btn-style-one"> Get started
@@ -307,7 +307,7 @@
             <div class="container">
                 <div class="row">
                 <div class="col-lg-12 footer-logo">
-                    <img src="footer-logo.png" alt="">
+                    <img src="images/footer-logo.png" alt="">
                 </div>
                 </div>
                 <div class="row">
