finish the quiz

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="format-detection" content="telephone=no">
     <title>Quiq Claim</title>
-    <link rel="shortcut icon" href="http://139.59.28.82/QC-Release2/uploads/sitesetting/Group 1265.png">
+    <link rel="shortcut icon" href="images/Group 1265.png">
     <link rel="stylesheet" href="style12.css">
     <link rel="stylesheet" type="text/css" href="custom.css">
     <link rel="stylesheet" type="text/css" href="carousel.css">
